--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Ethan Look</title>
+    <link rel="stylesheet" type="text/css" href="src/home/resume.css">
   </head>
   <body>
     <div id="app"></div>
