--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
   <head>
     <title>Ethan Look</title>
-    <link rel="stylesheet" type="text/css" href="src/home/resume.css">
   </head>
   <body>
     <div id="app"></div>
-    <script src="build/app.js"></script>
+    <script src="build/main.js"></script>
   </body>
 </html>
